# birds_and_crustaceans

./: .gitignore  CREDITS.md  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  index.html
client/: Cargo.toml
client/src/: main.rs  menu.rs
client/src/component/: checksum.rs  collider.rs  debug_window.rs  dynamic.rs  enemy.rs  entity_type.rs  fixed.rs  health.rs  hit.rs  keep.rs  mark_to_delete.rs  mod.rs  my_cursor.rs  myself.rs  network_entity.rs  player.rs  position_history.rs  score_reward.rs  score_window.rs  solid.rs  stats_window.rs  training.rs
client/src/event/: collision.rs  mod.rs
client/src/resource/: audio_handles.rs  frame_info.rs  mod.rs  mouse_info.rs  network_id_provider.rs  opt.rs  random.rs  remote_frames.rs  render_info.rs  scores.rs
client/src/rollback/: mod.rs  reflect_resource.rs  rollback_stage.rs  world_snapshot.rs
client/src/system/: apply_inputs.rs  build_map.rs  calculate_checksum.rs  check_collision.rs  clear_events.rs  death.rs  debug_input.rs  despawn_players.rs  handle_client_events.rs  handle_hits.rs  hit.rs  input.rs  loading.rs  mark_to_delete.rs  mod.rs  move_cursor.rs  move_players.rs  reset_session.rs  setup_client.rs  setup_cursor.rs  setup_debug_window.rs  setup_score_window.rs  setup_stats_window.rs  spawn_players.rs  update_debug_window.rs  update_health_bar.rs  update_inputs.rs  update_mouse_info.rs  update_player_size.rs  update_position_history.rs  update_score_window.rs  update_stats_window.rs
server/: Cargo.toml
server/src/: main.rs  server_stage.rs
server/src/resource/: frames.rs  mod.rs  opt.rs  (+2 more)
(+27 files in other folders)
