[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
bevy = "0.6"
rand = "0.8"
instant = "0.1"
structopt = { version = "0.3", default-features = false }
bevy_networking_turbulence = { version = "0.4", default-features = false, features = ["use-webrtc"] }
